# rust-screenshare

./: Cargo.toml  Makefile.toml  tia.md
.github/workflows/: rust.yml
src/: enums.rs  main.rs  main1.rs  main2.rs  main3.rs  mainsss.rs  screen.rs
src/screen/: capture.rs  decoder.rs  decoderf.rs  encoder.rs  encoder__fmpeg.rs  net.rs  net1.rs  videowriter.rs
