[package]
name = "proj"
rust-version = "1.76"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "d3d9"] }
image = "0.23"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
scap ="0.0.5"
egui = "0.15"
eframe = "0.15"
openh264 ="0.6.0"