[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "d3d9"] }
image = "0.23"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
eframe ={version= "0.27.2", features = [
    "default",
    "__screenshot",
    "wgpu",
]}
openh264 ="0.6.0"
scap ="0.0.5"
local-ip-address = "0.6.1"
ffmpeg-sidecar = "1.1.0"
