[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser", "d3d9"] }
image = "0.23"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
eframe ={version= "0.27.2", features = [
    "default",
    "__screenshot",
    "wgpu",
]}
egui-dropdown = "0.2"
openh264 ="0.6.0"
scap ={git="https://github.com/CapSoftware/scap.git", branch="main"}
local-ip-address = "0.6.1"
ffmpeg-sidecar = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3.3"
crc = "3.2.1"
[target.'cfg(target_os = "linux")'.dependencies]
libspa = "0.8.0"
